# game-engine

./: .gitignore  CMakeLists.txt  README.md  err.txt  imgui.ini  run_long.txt  run_stderr.txt  startup_log.txt
assets/environment/: ATTRIBUTION.txt  blue_lagoon_1k.hdr
assets/fonts/: ATTRIBUTION.txt
assets/shaders/: bloom_blur.frag  bloom_blur.ps.hlsl  bloom_extract.frag  bloom_extract.ps.hlsl  bloom_temporal.ps.hlsl  contact_shadow.frag  debug_channel.frag  debug_channel.ps.hlsl  depth_blt.ps.hlsl  dlss_motion_copy.ps.hlsl  dlss_motion_dilate.ps.hlsl  dlss_zero_motion.ps.hlsl  downsample.ps.hlsl  dxr_gi_inject.ps.hlsl  dxr_indirect.ps.hlsl  dxr_primary_debug.ps.hlsl  dxr_shadow_debug.ps.hlsl  environment_sampling.hlsl  fullscreen.vert  fxaa.ps.hlsl  gi_depth_history.ps.hlsl  gi_temporal_debug.ps.hlsl  gizmo_line.vs.hlsl  grid.frag  grid.ps.hlsl  grid.vert  grid.vs.hlsl  grid_composite.ps.hlsl  gtao.ps.hlsl  hlsl_common.hlsl  ibl_brdf.frag  ibl_cubemap.vert  ibl_equirect_to_cubemap.frag  ibl_equirect_to_cubemap.ps.hlsl  ibl_irradiance.frag  ibl_irradiance.ps.hlsl  ibl_prefilter.frag  ibl_prefilter.ps.hlsl  lit.vert  lit.vs.hlsl  (+67 more)
assets/shaders/dxr/: diffuse_gi.hlsl  dxr_geometry_types.hlsli  dxr_smoke.hlsl  hit_shading.hlsli  path_tracer.hlsl  primary_debug.hlsl  pt_dielectric.hlsli  pt_env_light.hlsli  reflections.hlsl  restir_di.hlsli  restir_di_temporal.hlsl  restir_pack.hlsli  restir_stubs.hlsl  restir_types.hlsli  shadows.hlsl
assets/shaders/editor/: selection_glow.ps.hlsl  selection_outline.vs.hlsl
assets/shaders/environment/: ibl_brdf.ps.hlsl  ibl_brdf.vs.hlsl  ibl_cubemap.vs.hlsl  ibl_irradiance.ps.hlsl  sky_background.ps.hlsl
assets/shaders/geometry/: lit.vs.hlsl  pbr_lighting_core.hlsli  scene_gbuffer.as.hlsl  scene_gbuffer.ms.hlsl  scene_gbuffer_common.hlsli
assets/shaders/shadows/: scene_shadow.as.hlsl  scene_shadow.ms.hlsl  shadow_depth.vs.hlsl
cmake/: AgilitySdk.cmake  EngineLibraries.cmake  NRDIncrementalShaders.cmake  PatchNrdIncremental.cmake
diagnostics/: render_diagnostics.txt
scripts/: benchmark-build.ps1  benchmark-project-load.ps1  capture-pt-nsight.ps1  capture-pt-optical-orbit.ps1  capture-s0p2-dlss-trace.ps1  capture-s0p3-history-trace.ps1  capture-s0p4-gpu-events.ps1  capture-s1p4-history-compatibility.ps1  capture-s1p6-cornell.ps1  capture-s1p6-dual-view.ps1  capture-s1p6-opaque-timing.ps1  capture-s2p1-exposure.ps1  capture-s2p2-extent-matrix.ps1  capture-s2p4-active-matrix.ps1  capture-s2p4-aovs.ps1  capture-s2p4-fallback-smoke.ps1  capture-s2p5-mode-matrix.ps1  pt-floor-di1-diagnostic.local.json  pt-floor-env-di-probes.local.json  pt-floor-env-di-radiance-metadata-screen.local.json  pt-floor-hard-sun-diagnostic.local.json  pt-floor-restir-spatial-shader-profile.local.json  pt-nsight-marker.local.json  pt-nsight-pair.example.json  pt-nsight-pair.local.json  pt-nsight-shader-profile.local.json  run-gpu-tier.ps1  run-pt-gpu-gate.ps1  run-tests.ps1  validate-s1p3-dlss-cadence.ps1  validate-s1p35-pt-viewport-ownership.ps1  validate-s2p5-exposure-images.ps1
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Shader.cpp  Shader.h  main.cpp
src/app/: Application.cpp  Application.h  DebugPanel.cpp  DebugPanel.h  DemoScene.cpp  DemoScene.h  EditorClipboard.cpp  EditorClipboard.h  EditorDockLayout.cpp  EditorDockLayout.h  EditorDockSpace.cpp  EditorDockSpace.h  EditorIcons.h  EditorPanelLayout.cpp  EditorPanelLayout.h  EditorReorderDragDrop.h  EditorSettings.cpp  EditorSettings.h  EditorTopToolbar.cpp  EditorTopToolbar.h  EditorViewportRect.h  EditorWidgets.cpp  GameViewportPanel.cpp  GameViewportPanel.h  InspectorEditMode.cpp  InspectorMultiEdit.cpp  InspectorMultiEdit.h  InspectorTransform.cpp  InspectorTransform.h  LightingPanel.cpp  LightingPanel.h  MainMenuBar.cpp  MainMenuBar.h  PhysicsWorld.cpp  PhysicsWorld.h  PlayModeController.cpp  ProjectChooser.cpp  ProjectChooser.h  ProjectEditorState.cpp  ProjectEditorState.h  (+53 more)
src/engine/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraGizmoRenderer.cpp  CameraGizmoRenderer.h  CascadedShadowMap.cpp  CascadedShadowMap.h  ColliderComponent.cpp  ColliderComponent.h  ColliderGizmoRenderer.cpp  ColliderGizmoRenderer.h  Constants.h  DirectionalShadowSettings.h  FileDialog.cpp  FileDialog.h  Framebuffer.cpp  Framebuffer.h  GizmoGeometry.cpp  GizmoGeometry.h  GridRenderer.cpp  GridRenderer.h  IBL.cpp  ImGuiFonts.cpp  ImGuiFonts.h  ImGuiLayer.cpp  ImGuiLayer.h  Input.cpp  Input.h  InspectorComponentOrder.cpp  InspectorComponentOrder.h  Light.cpp  Light.h  LightComponent.cpp  LightComponent.h  LightGizmoRenderer.cpp  LightGizmoRenderer.h  Material.cpp  Material.h  MaterialTextures.cpp  (+44 more)
src/primitives/: Capsule.cpp  Capsule.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Floor.cpp  Floor.h  Plane.cpp  Plane.h  PrimitiveMeshUtils.cpp  PrimitiveMeshUtils.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
tests/: background_work_test.cpp  brdf_energy_test.cpp  capture_manifest_test.cpp  color_space_test.cpp  d3d12_render_tests.cpp  d3d12_test_harness.cpp  d3d12_test_harness.h  d3d12_test_runner.cpp  d3d12_test_runner.h  descriptor_heap_test.cpp  directional_shadow_settings_test.cpp  dlss_extent_planner_test.cpp  dlss_frame_token_test.cpp  dxr_acceleration_structure_test.cpp  dxr_settings_test.cpp  dxr_shader_infrastructure_test.cpp  engine_tests_main.cpp  env_importance_test.cpp  frustum_cull_test.cpp  guide_encoding_test.cpp  history_compatibility_test.cpp  irradiance_sh_test.cpp  material_test.cpp  mis_nee_test.cpp  nee_mis_integration_test.cpp  path_rng_test.cpp  payload_pack_test.cpp  project_viewport_reveal_gate_test.cpp  pt_mirror_chain_guide_math_test.cpp  pt_temporal_history_test.cpp  pt_test_harness.cpp  pt_test_harness.h  pt_viewport_ownership_test.cpp  reconstruction_exposure_test.cpp  reconstruction_jitter_test.cpp  refraction_test.cpp  restir_di_test.cpp  restir_gi_test.cpp  restir_surface_validation_test.cpp  restir_temporal_chain_test.cpp  (+10 more)
tests/fixtures/: pt_mirror_chain_hall.gameproject  pt_mirror_chain_hall.md
(+641 files in other folders)
